--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -21,7 +21,7 @@ import { Image } from "astro:assets"
       class="absolute -bottom-24 z-90 animate-fadeInDown"
       width={200}
       height={200}
-      src="/logo.svg"
+      src="/logo.png"
       alt="Logo do Pesqueiro do Parque"
     />
   </div>
