--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -10,7 +10,7 @@ import { Image } from "astro:assets"
     <div class="max-w-80">
       <Image
         class="h-auto max-w-full rounded-lg"
-        src="/01.jpeg"
+        src="/01.webp"
         alt=""
         width={900}
         height={900}
@@ -19,7 +19,7 @@ import { Image } from "astro:assets"
     <div class="max-w-80">
       <Image
         class="h-auto max-w-full rounded-lg"
-        src="/02.jpeg"
+        src="/02.webp"
         alt=""
         width={900}
         height={900}
@@ -28,7 +28,7 @@ import { Image } from "astro:assets"
     <div class="max-w-80">
       <Image
         class="h-auto max-w-full rounded-lg"
-        src="/03.jpeg"
+        src="/03.webp"
         alt=""
         width={900}
         height={900}
@@ -37,7 +37,7 @@ import { Image } from "astro:assets"
     <div class="max-w-80">
       <Image
         class="h-auto max-w-full rounded-lg"
-        src="/04.jpeg"
+        src="/04.webp"
         alt=""
         width={900}
         height={900}
@@ -46,7 +46,7 @@ import { Image } from "astro:assets"
     <div class="max-w-80">
       <Image
         class="h-auto max-w-full rounded-lg"
-        src="/05.jpeg"
+        src="/05.webp"
         alt=""
         width={900}
         height={900}
@@ -55,7 +55,7 @@ import { Image } from "astro:assets"
     <div class="max-w-80">
       <Image
         class="h-auto max-w-full rounded-lg"
-        src="/06.jpeg"
+        src="/06.webp"
         alt=""
         width={900}
         height={900}
@@ -64,7 +64,7 @@ import { Image } from "astro:assets"
     <div class="max-w-80">
       <Image
         class="h-auto max-w-full rounded-lg"
-        src="/07.jpeg"
+        src="/07.webp"
         alt=""
         width={900}
         height={900}
@@ -73,7 +73,7 @@ import { Image } from "astro:assets"
     <div class="max-w-80">
       <Image
         class="h-auto max-w-full rounded-lg"
-        src="/08.jpeg"
+        src="/08.webp"
         alt=""
         width={900}
         height={900}
@@ -82,7 +82,7 @@ import { Image } from "astro:assets"
     <div class="max-w-80">
       <Image
         class="h-auto max-w-full rounded-lg"
-        src="/09.jpeg"
+        src="/09.webp"
         alt=""
         width={900}
         height={900}
@@ -92,7 +92,7 @@ import { Image } from "astro:assets"
   <div class="relative bg-black md:hidden">
     <div
       class="absolute inset-0 bg-cover bg-center"
-      style="background-image: url('./02.jpeg'); opacity: 0.5;"
+      style="background-image: url('./02.webp'); opacity: 0.5;"
     >
     </div>
     <div
