--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,7 +5,7 @@ import { Image } from "astro:assets"
 <section id="hero" class="relative bg-black">
   <div
     class="absolute inset-0 bg-cover bg-center"
-    style="background-image: url('./hero-background.jpeg'); opacity: 0.5;"
+    style="background-image: url('./hero-background.webp'); opacity: 0.5;"
   >
   </div>
   <div
@@ -21,7 +21,7 @@ import { Image } from "astro:assets"
       class="absolute -bottom-24 z-90 animate-fadeInDown"
       width={200}
       height={200}
-      src="/logo.png"
+      src="/logo.webp"
       alt="Logo do Pesqueiro do Parque"
     />
   </div>
