--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,10 +2,14 @@
 import Navbar from "../components/Navbar.astro"
 ---
 
-<html lang="en" class="scroll-smooth">
+<html lang="pt-br" class="scroll-smooth">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta
+      name="Pesqueiro do Parque"
+      content="Local para pesca esportiva/pesque e solte"
+    />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
