--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ import Navbar from "../components/Navbar.astro"
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta
-      name="Pesqueiro do Parque"
+      name="description"
       content="Local para pesca esportiva/pesque e solte"
     />
     <meta name="viewport" content="width=device-width" />
