--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -1,5 +1,19 @@
 ---
 import { Image } from "astro:assets"
+const features = [
+  {
+    icon: "/src/assets/water.svg",
+    text: "Nosso lago possui 6.000 m² onde é praticada a pesca esportiva pesque e solte, proporcionando um ambiente amplo e em contato com a natureza.",
+  },
+  {
+    icon: "/src/assets/fish.svg",
+    text: "Dispomos de espécies variadas de peixes que podem proporcionar de uma pescaria tranquila até desafiadora com exemplares de até 29kg.",
+  },
+  {
+    icon: "/src/assets/utensils.svg",
+    text: "Servimos porções, bebidas, água e refrigente. Tudo para proporcionar o maior conforto para você e sua família!",
+  },
+]
 ---
 
 <section
@@ -15,53 +29,19 @@ import { Image } from "astro:assets"
   <div
     class="flex flex-wrap align-middle justify-center text-md font-semibold gap-8 z-10 pb-60"
   >
-    <div class="max-w-sm text-center h-full">
-      <Image
-        src="/water.svg"
-        alt=""
-        width={50}
-        height={50}
-        class="mx-auto pb-8"
-      />
-      <p>
-        Nosso lago possui 6.000 m² onde é praticada a pesca esportiva (pesque e
-        solte), proporcionando um ambiente amplo e em contato com a natureza.
-      </p>
-    </div>
-    <div class="max-w-sm text-center h-full">
-      <Image
-        src="/fish.svg"
-        alt=""
-        width={50}
-        height={50}
-        class="mx-auto pb-8"
-      />
-
-      <p>
-        Dispomos de espécies variadas de peixes que podem proporcionar de uma
-        pescaria tranquila até desafiadora com exemplares de até 29kg.
-      </p>
-    </div>
-    <div class="max-w-sm text-center h-full">
-      <Image
-        src="/utensils.svg"
-        alt=""
-        width={50}
-        height={50}
-        class="mx-auto pb-8"
-      />
-
-      <p>
-        Servimos porções, bebidas, água e refrigente. Tudo para proporcionar o
-        maior conforto para você e sua família!
-      </p>
-    </div>
+    {
+      features.map((feature) => (
+        <div class="max-w-sm text-center h-full">
+          <Image
+            src={feature.icon}
+            alt=""
+            width={50}
+            height={50}
+            class="mx-auto pb-8"
+          />
+          <p> {feature.text}</p>
+        </div>
+      ))
+    }
   </div>
-  <Image
-    class="absolute bottom-0 w-screen"
-    src="/shape.svg"
-    alt=""
-    width={300}
-    height={300}
-  />
 </section>
