--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
 import Navbar from "../components/Navbar.astro"
+import "@fontsource/kalam/400.css"
+import "@fontsource/kalam/700.css"
 ---
 
 <html lang="pt-br" class="scroll-smooth">
