--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -38,13 +38,16 @@ const images = [
   </div>
   <div class="relative bg-black md:hidden">
     <div
-      class="absolute inset-0 bg-cover bg-center"
-      style="background-image: url('/src/assets/02.webp'); opacity: 0.5;"
+      class="absolute inset-0 bg-cover bg-center bg-gallery-background opacity-50"
     >
     </div>
     <div
-      class="relative z-10 flex flex-col items-center justify-center h-[88vh] text-white text-center px-6"
+      class="relative z-10 flex flex-col items-center justify-center h-[88vh] text-center px-6"
     >
+      <a
+        href="https://www.instagram.com/pesqueiro_do_parque/"
+        class="text-6xl text-white font-kalam font-bold">Galeria</a
+      >
     </div>
   </div>
 </section>
