--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,8 +5,7 @@ import logo from "../assets/logo.webp"
 
 <section id="hero" class="relative bg-black">
   <div
-    class="absolute inset-0 bg-cover bg-center"
-    style="background-image: url('/src/assets/hero-background.webp'); opacity: 0.5;"
+    class="absolute inset-0 bg-cover bg-center bg-hero-background opacity-50"
   >
   </div>
   <div
