--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import Navbar from "../components/Navbar.astro"
 import "@fontsource/kalam/400.css"
 import "@fontsource/kalam/700.css"
+import "@fontsource-variable/inter/slnt.css"
 ---
 
 <html lang="pt-br" class="scroll-smooth">
