--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,6 +1,6 @@
 <header class="fixed w-screen py-4 px-8 z-20 bg-black/50 backdrop-blur-sm">
   <nav
-    class="flex lg:flex-row items-center justify-center max-w-screen-xl mx-auto h-1"
+    class="flex lg:flex-row items-center justify-center max-w-screen-xl mx-auto"
   >
     <ul class="flex lg:flex-row gap-12 text-white font-kalam text-lg">
       <li><a href="#hero">Inicio</a></li>
