--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -38,7 +38,7 @@ const images = [
   </div>
   <div class="relative bg-black md:hidden">
     <div
-      class="absolute inset-0 bg-cover bg-center bg-hero-background opacity-50"
+      class="absolute inset-0 bg-cover bg-center bg-gallery-background opacity-50"
     >
     </div>
     <div
