--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -36,7 +36,7 @@ const images = [
       ))
     }
   </div>
-  <div class="relative bg-black md:hidden">
+  <div class="relative bg-black">
     <div
       class="absolute inset-0 bg-cover bg-center bg-gallery-background opacity-50"
     >
