--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -36,7 +36,7 @@ const images = [
       ))
     }
   </div>
-  <div class="relative bg-black">
+  <div class="relative bg-black md:hidden">
     <div
       class="absolute inset-0 bg-cover bg-center bg-gallery-background opacity-50"
     >
@@ -46,7 +46,8 @@ const images = [
     >
       <a
         href="https://www.instagram.com/pesqueiro_do_parque/"
-        class="text-6xl text-white font-kalam font-bold">Galeria</a
+        class="text-6xl text-white font-kalam font-bold"
+        target="_blank">Galeria</a
       >
     </div>
   </div>
