--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -10,7 +10,7 @@ const features = [
   },
   {
     icon: "fish",
-    text: "Dispomos de espécies variadas de peixes que podem proporcionar de uma pescaria tranquila até desafiadora com exemplares de até 29kg.",
+    text: "Contamos com uma ampla variedade de espécies de peixes em nosso lago, proporcionando diferentes experiências de pesca, desde as mais tranquilas até as mais desafiadoras, com exemplares de até 29kg.",
   },
   {
     icon: "utensils",
@@ -42,10 +42,10 @@ const features = [
     }
   </div>
   <Image
-    class="absolute bottom-0 w-screen"
+    class="absolute bottom-0 w-screen object-cover"
     src={shape}
     alt=""
-    width={300}
-    height={300}
+    width={1920}
+    height={1080}
   />
 </section>
