--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -20,8 +20,8 @@ import logo from "../assets/logo.webp"
     <Image
       class="absolute -bottom-24 z-90 animate-fadeInDown"
       src={logo}
-      width="200"
-      height="200"
+      width={200}
+      height={200}
       alt="Logo do Pesqueiro do Parque"
     />
   </div>
