--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,5 +10,5 @@ import Footer from "../components/Footer.astro"
   <Hero />
   <Features />
   <Gallery />
-  <!-- <Footer /> -->
+  <Footer />
 </Layout>
