--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets"
-import logo from "../assets/logo.webp"
+import logo from "../../public/logo.webp"
 ---
 
 <section id="hero" class="relative bg-black">
