--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -44,7 +44,7 @@ import { Icon } from "astro-icon/components"
       loading="lazy"
       referrerpolicy="no-referrer-when-downgrade"></iframe>
     <iframe
-      class="md:hidden"
+      class="md:hidden pb-10 md:pb-0"
       src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14954.01033160248!2d-54.5654307!3d-20.4445409!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9486e91d60fca02d%3A0x52cbc067908414cb!2sPesqueiro%20do%20Parque%20-%20Pesque%20e%20Pague%20%7C%20Pesca%7C%20Peixe%20Assado%20%7C%20Por%C3%A7%C3%B5es%20%7C%20Lazer!5e0!3m2!1spt-BR!2sbr!4v1715363888282!5m2!1spt-BR!2sbr"
       width="300"
       height="400"
@@ -52,7 +52,7 @@ import { Icon } from "astro-icon/components"
       allowfullscreen=""
       loading="lazy"
       referrerpolicy="no-referrer-when-downgrade"></iframe>
-    <span class="absolute bottom-4 text-white"
+    <span class="absolute bottom-4 text-white text-sm"
       >Desenvolvido por <a
         href="https://shinzato-dev.vercel.app/"
         target="_blank">shinzato.dev</a
