--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -41,11 +41,9 @@ const features = [
       ))
     }
   </div>
-  <Image
+  <img
     class="absolute bottom-0 w-screen object-cover"
-    src={shape}
+    src="/shape.svg"
     alt=""
-    width={1920}
-    height={1080}
   />
 </section>
