--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,5 @@
 ---
-import logo from "../../public/logo.webp"
+
 ---
 
 <section id="hero" class="relative bg-black">
@@ -10,10 +10,10 @@ import logo from "../../public/logo.webp"
   <div
     class="relative z-10 flex flex-col items-center justify-center h-[88vh] text-white text-center px-6"
   >
-    <span class="text-xl sm:text-2xl font-kalam animate-fadeInDown pb-2"
+    <span class="text-xl sm:text-2xl font-bristain animate-fadeInDown pb-1"
       >Bem vindo(a) ao</span
     >
-    <h1 class="text-2xl sm:text-6xl font-bold font-kalam animate-fadeInDown">
+    <h1 class="text-2xl sm:text-6xl animate-fadeInDown font-bristain uppercase">
       Pesqueiro do Parque
     </h1>
     <img
