--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -20,7 +20,7 @@ const features = [
 <section
   class="relative bg-[#06a9b6] flex flex-col items-center justify-center gap-8 text-black px-6"
 >
-  <h2 class="text-4xl sm:text-5xl font-bold font-kalam z-10 pt-36">
+  <h2 class="text-4xl sm:text-5xl font-bold font-bristain z-10 pt-36 uppercase">
     Pesca Esportiva
   </h2>
   <p class="text-md text-center max-w-lg font-semibold z-10 pb-16">
