--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,11 +1,14 @@
 <header class="fixed w-screen py-4 px-8 z-20 bg-black/50 backdrop-blur-sm">
   <nav
-    class="flex lg:flex-row items-center justify-center max-w-screen-xl mx-auto"
+    class="hidden md:flex lg:flex-row items-center justify-center max-w-screen-xl mx-auto"
   >
-    <ul class="flex lg:flex-row gap-12 text-white font-kalam text-lg">
+    <ul class="flex lg:flex-row gap-12 text-white font-bristain uppercase">
       <li><a href="#hero">Inicio</a></li>
       <li><a href="#gallery">Galeria</a></li>
       <li><a href="#">Localização</a></li>
     </ul>
   </nav>
+  <button id="menu-button" class="md:hidden text-white font-bristain uppercase"
+    >Menu</button
+  >
 </header>
