--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -63,7 +63,7 @@ const images = [
     >
       <a
         href="https://www.instagram.com/pesqueiro_do_parque/"
-        class="text-6xl text-white font-kalam font-bold"
+        class="text-6xl text-white font-bristain"
         target="_blank">Galeria</a
       >
     </div>
