--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,7 @@
   <div
     class="relative z-10 flex flex-col items-center justify-center h-[88vh] text-white text-center px-6"
   >
-    <span class="text-xl sm:text-2xl font-bristain animate-fadeInDown pb-1"
+    <span class="text-xl sm:text-2xl font-dmSerif animate-fadeInDown pb-1"
       >Bem vindo(a) ao</span
     >
     <h1 class="text-2xl sm:text-6xl animate-fadeInDown font-bristain uppercase">
