--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ import "../styles/global.css"
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <title>Pesqueiro do Parque</title>
   </head>
-  <body class="font-inter">
+  <body>
     <Navbar />
     <slot />
   </body>
