--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -20,10 +20,10 @@ const features = [
 <section
   class="relative bg-[#06a9b6] flex flex-col items-center justify-center gap-8 text-black px-6"
 >
-  <h2 class="text-4xl sm:text-5xl font-bold font-bristain z-10 pt-36 uppercase">
+  <h2 class="text-4xl sm:text-5xl font-bristain z-10 pt-36 uppercase">
     Pesca Esportiva
   </h2>
-  <p class="text-md text-center max-w-lg font-semibold z-10 pb-16">
+  <p class="text-center max-w-lg font-semibold z-10 pb-16 font-dmSerif">
     Traga sua família e amigos(as) e venham desfrutar de momentos inesqueciveis
     que só a pesca esportiva pode proporcionar!
   </p>
@@ -32,7 +32,7 @@ const features = [
   >
     {
       features.map((feature) => (
-        <div class="max-w-sm text-center h-full">
+        <div class="max-w-sm text-center h-full font-dmSerif">
           <Icon class="text-black mx-auto mb-8" name={feature.icon} size={50} />
           <p> {feature.text}</p>
         </div>
