--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 import { Icon } from "astro-icon/components"
 ---
 
-<section id="hero" class="relative bg-[#502d00]">
+<section id="footer" class="relative bg-[#502d00]">
   <div
     class="absolute inset-0 bg-cover bg-center bg-footer-background opacity-50"
   >
@@ -16,7 +16,7 @@ import { Icon } from "astro-icon/components"
       <span class="text-xl sm:text-2xl font-bristain">No coração de</span>
       <h3 class="text-4xl sm:text-6xl font-bristain pb-6">Campo Grande!</h3>
       <p
-        class="text-md max-w-lg font-semibold z-10 pb-6 text-center md:text-start"
+        class="text-md max-w-lg z-10 pb-6 text-center md:text-start font-dmSerif"
       >
         Estamos localizados na <a
           class="underline underline-offset-4"
@@ -24,7 +24,7 @@ import { Icon } from "astro-icon/components"
           >Av. Hiroshima, nº 261 - Bairro Carandá Bosque</a
         >, próximo ao Parque dos Poderes.
       </p>
-      <div class="flex flex-col gap-1 font-semibold">
+      <div class="flex flex-col gap-1 font-dmSerif">
         <a
           href="https://api.whatsapp.com/send?phone=5567991255143"
           class="flex"
@@ -50,7 +50,7 @@ import { Icon } from "astro-icon/components"
     <span class="absolute bottom-4 text-white text-sm"
       >Desenvolvido por <a
         href="https://shinzato-dev.vercel.app/"
-        target="_blank">shinzato.dev</a
+        target="_blank">Douglas Shinzato</a
       >
     </span>
   </div>
