--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,3 +4,9 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: "DMSerifText-Regular";
+  src: url("/fonts/DMSerifText-Regular.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
