--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,17 +1,3 @@
-<!-- <header class="fixed w-screen py-4 px-8 z-20 bg-black/50 backdrop-blur-sm">
-  <nav
-    class="hidden md:flex lg:flex-row items-center justify-center max-w-screen-xl mx-auto"
-  >
-    <ul class="flex lg:flex-row gap-12 text-white font-bristain uppercase">
-      <li><a href="#hero">Inicio</a></li>
-      <li><a href="#gallery">Galeria</a></li>
-      <li><a href="#">Localização</a></li>
-    </ul>
-  </nav>
-  <button id="menu-button" class="md:hidden text-white font-bristain uppercase"
-    >Menu</button
-  >
-</header> -->
 <header
   class="fixed w-screen py-4 px-8 z-20 bg-black/50 backdrop-blur-sm animate-fadeInDown"
 >
@@ -36,5 +22,12 @@
 
   menuButton.addEventListener("click", () => {
     navList.classList.toggle("hidden")
+  })
+
+  const navLinks = document.querySelectorAll("nav ul li a")
+  navLinks.forEach((link) => {
+    link.addEventListener("click", () => {
+      navList.classList.add("hidden")
+    })
   })
 </script>
