hero and navbar adjustments

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -32,7 +32,7 @@ import { Icon } from "astro-icon/components"
           <Icon class="mr-2 my-auto" name="whatsapp" size={22} />
           (67) 99125-5143
         </a>
-        <a href="http://" class="flex">
+        <a href="https://www.instagram.com/pesqueiro_do_parque/" class="flex">
           <Icon class="mr-2 my-auto" name="instagram" size={22} />
           @pesqueiro_do_parque
         </a>
