--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -4,13 +4,13 @@
   <nav class="flex flex-col">
     <button
       id="menu-button"
-      class="md:hidden text-white font-bristain uppercase">Menu</button
+      class="sm:hidden text-white font-bristain uppercase">Menu</button
     >
     <ul
-      class="hidden pt-4 md:pt-0 md:flex flex-col md:flex-row justify-center align-middle gap-1 md:gap-8 text-white text-center font-bristain uppercase"
+      class="hidden pt-4 sm:pt-0 sm:flex flex-col sm:flex-row justify-center align-middle sm:gap-8 text-white text-center font-bristain uppercase"
     >
       <li><a href="#hero">Inicio</a></li>
-      <li><a href="#gallery">Galeria</a></li>
+      <li class="py-2 sm:py-0"><a href="#gallery">Galeria</a></li>
       <li><a href="#footer">Localização</a></li>
     </ul>
   </nav>
