--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,8 +14,20 @@ import "../styles/global.css"
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta name="generator" content={Astro.generator} />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="preload"
+      as="font"
+      href="/fonts/Bristain-Rought.woff2"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      as="font"
+      href="/fonts/DMSerifText-Regular.woff2"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
     <title>Pesqueiro do Parque</title>
   </head>
   <body>
